# lidar_diff_ray_casting

./: README.md  pyproject.toml
src/: __init__.py  fast_voxel_traversal.py  ray_casting.py
src/lidar_diff_ray_casting/: __init__.py  fast_voxel_traversal_numba.py  ray_casting.py
test/: __init__.py  test_fast_voxel_traversal.py  test_gradient_comparison.ipynb  test_polar_voxel_traversal.ipynb  test_ray_casting.ipynb  test_ray_casting.py
