[project]
name = "lidar-diff-ray-casting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "numba==0.61.0",
    "numpy==2.1.3",
    "scipy>=1.16.0",
    "torch>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lidar_diff_ray_casting"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython==8.36.0",
    "matplotlib>=3.10.3",
]
